some fixes to the prototype for gds and updated index page.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -23,6 +23,49 @@
       </h1>
 
 
+      <br>
+      <p><a href="/clear-session">Start fresh</a></p>
+
+
+      <h2 class="heading-medium">Event producer</h2>
+
+
+      <p><a href="/scenario-1">Sign in to account</a></p>
+
+
+
+      <h2 class="heading-medium">Event attendee</h2>
+
+      <p><a href="/register-for-event">Register for event journey</a></p>
+
+      <p class="bold" style="margin-top:35px;">Basic event examples</p>
+
+      <ul>
+        <li><a href="/scenario-2">Generic</a></li>
+        <br/>
+        <li><a href="/scenario-3">Food and drink</a></li>
+        <br/>
+        <li><a href="/scenario-4">Germany - retail</a></li>
+        <br/>
+        <li><a href="/scenario-5">Sports technology in France</a></li>
+        <br/>
+        <li><a href="/scenario-6">Sell your products and services overseas</a></li>
+        <br/>
+        <li><a href="/scenario-7">Manufacturing and engineering</a></li>
+      </ul>
+
+
+
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+
+      <h2 class="heading-medium">Other stuff</h2>
+
+
       <h2 class="heading-medium">December 2017</h2>
       <br/>
       <p><a href="/return-journey/eb-email">email 1</a></p>
@@ -52,7 +95,6 @@
         <br/>
         <li><a href="/scenario-1">Scenario one</a></li>
         <br/>
-        <br/>
         <li><a href="/scenario-2">Generic</a></li>
         <br/>
         <li><a href="/scenario-3">Food and drink</a></li>
@@ -79,19 +121,15 @@
 
       <br>
 
-      <h2 class="heading-medium">Internal User</h2>
+      <h3 class="heading-medium">Internal User</h3>
 
 	  <ul>
 		  <li><a href="/signin">Sign in page</a></li>
 		  <li><a href="account">User's account page</a></li>
 	  </ul>
 
-
-
       <br>
       <br>
-
-
 
       <p><a href="/clear-session">Start fresh</a></p>
 
