--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -265,7 +265,7 @@
 				  {% if session.data['map-url'] == "" %}
 				  	<dd class="cya-answer">Optional field, left empty.</dd>
 				  {% else %}
-				  	<dd class="cya-answer" style="word-break: break-all;">{{ data['map-url'] }}</dd>
+				  	<dd class="cya-answer" style="word-break: break-all;"><a href="{{ data['map-url'] }}">{{ data['map-url'] }}</a></a></dd>
 				  {% endif %}
 
 				  <dd class="cya-change ">
