updates signin process

--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -11,7 +11,7 @@
     <div class="column-full">
 
       <h1 class="heading-large">
-		  DIT South West events
+		  DIT {{session.regionName}} events
       </h1>
 
 		<!--  TABS FOR TYPES OF EVENT STATUS  -->
@@ -80,7 +80,7 @@
 						<br>
 						<br>
 
-						<p>You don't have any past events.</p>
+						<p>No previous events to display.</p>
 					</div>
 				</div>
 
