--- a/app/views/register/sign-in-or-create-account.html
+++ b/app/views/register/sign-in-or-create-account.html
@@ -3,7 +3,7 @@
 {% set loggedIn = false %}
 {% endif %}
 {% set external_journey = true %}
-
+{% set external_journey = true %}
 {% block page_title %}
 
   GOV.UK prototype kit
