--- a/app/views/signin/index.html
+++ b/app/views/signin/index.html
@@ -19,7 +19,7 @@
       <p>Use your DIT email credentials to access your events account.</p>
 
 
-	  <form action="/homepage-prelude" method="get" class="form">
+	  <form action="/signin/select-team" method="get" class="form">
 
 
 		  <div class="form-group" style="margin-top:10px; margin-bottom:20px">
