--- a/app/views/index.html
+++ b/app/views/index.html
@@ -36,7 +36,7 @@
 
       <h2 class="heading-medium">Event attendee</h2>
 
-      <p><a href="/register-for-event">Register for event journey</a></p>
+      <p><a href="/register-for-event-attendee">Register for event journey</a></p>
 
       <p class="bold" style="margin-top:35px;">Basic event examples</p>
 
