updated banner and feedback for producer

--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% set loggedIn = true %}
 {% block page_title %}
-  GOV.UK prototype kit
+	Create an event
 {% endblock %}
 
 {% block content %}
