--- a/app/views/includes/phase_banner_alpha.html
+++ b/app/views/includes/phase_banner_alpha.html
@@ -1,6 +1,7 @@
 <div class="phase-banner">
   <p>
     <strong class="phase-tag">ALPHA</strong>
-    <span>This is a new service – your <a href="#">feedback</a> will help us to improve it.</span>
+    <span>This is a new service - your feedback will
+                <a target="_blank" rel="noopener noreferrer" href="#">help us improve it</a>.</span>
   </p>
 </div>
