updated regions selection

--- a/app/views/signin/select-team.html
+++ b/app/views/signin/select-team.html
@@ -40,22 +40,33 @@
 				  <input id="region-5" type="radio" name="radio-region" value="North West">
 				  <label for="region-5">North West</label>
 			  </div>
-			  <div class="multiple-choice">
-				  <input id="region-6" type="radio" name="radio-region" value="South East">
-				  <label for="region-6">South East</label>
-			  </div>
-			  <div class="multiple-choice">
-				  <input id="region-7" type="radio" name="radio-region" value="South West">
-				  <label for="region-7">South West</label>
-			  </div>
-			  <div class="multiple-choice">
-				  <input id="region-8" type="radio" name="radio-region" value="West Midlands">
-				  <label for="region-8">West Midlands</label>
-			  </div>
-			  <div class="multiple-choice">
-				  <input id="region-9" type="radio" name="radio-region" value="Yorkshire and the Humber">
-				  <label for="region-9">Yorkshire and the Humber</label>
-			  </div>
+
+			  <details role="group" style="width:650px;  ">
+				  <summary role="button" aria-controls="details-content-0" aria-expanded="false" style="margin-top:10px;">
+					  <span class="summary">more teams</span></summary>
+				  <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true"  style="margin-top:0px; margin-bottom:30px; padding-bottom:10px;">
+
+					  <div class="multiple-choice">
+						  <input id="region-6" type="radio" name="radio-region" value="South East">
+						  <label for="region-6">South East</label>
+					  </div>
+					  <div class="multiple-choice">
+						  <input id="region-7" type="radio" name="radio-region" value="South West">
+						  <label for="region-7">South West</label>
+					  </div>
+					  <div class="multiple-choice">
+						  <input id="region-8" type="radio" name="radio-region" value="West Midlands">
+						  <label for="region-8">West Midlands</label>
+					  </div>
+					  <div class="multiple-choice">
+						  <input id="region-9" type="radio" name="radio-region" value="Yorkshire and the Humber">
+						  <label for="region-9">Yorkshire and the Humber</label>
+					  </div>
+
+				  </div>
+			  </details>
+
+
 		  </div>
 
 
