--- a/app/views/includes/great-header.html
+++ b/app/views/includes/great-header.html
@@ -168,6 +168,9 @@ main#content {max-width: 1200px}
         padding: 10px 0;
         border-bottom: 1px solid #DDD;">
         <strong class="phase-tag">Alpha</strong>
-        <span>This is a new service – your <a href="#">feedback</a> will help us to improve it.</a>.</span>
+          <span>
+            This is a new service - your
+              <a target="_blank" rel="noopener noreferrer" href="/account/great-feedback" style="text-decoration: underline;">feedback</a> will help us improve it.
+          </span>
       </p>
     </div>
