--- a/app/views/includes/phase_banner_alpha.html
+++ b/app/views/includes/phase_banner_alpha.html
@@ -1,7 +1,9 @@
 <div class="phase-banner">
   <p>
     <strong class="phase-tag">ALPHA</strong>
-    <span>This is a new service - your feedback will
-                <a target="_blank" rel="noopener noreferrer" href="#">help us improve it</a>.</span>
+        <span>
+            This is a new service - your
+              <a target="_blank" rel="noopener noreferrer" href="/account/great-feedback" style="text-decoration: underline;">feedback</a> will help us improve it.
+          </span>
   </p>
 </div>
