--- a/app/views/register/business-address.html
+++ b/app/views/register/business-address.html
@@ -4,9 +4,12 @@
 {% endif %}
 {% set external_journey = true %}
 
-{% block page_title %}
+{% block after_header %}
+<!-- nothing to there is no second alpha banner -->
+{% endblock %}
 
-  GOV.UK prototype kit
+{% block page_title %}
+GOV.UK prototype kit
 {% endblock %}
 
 {% block content %}
