--- a/app/views/signin/select-team.html
+++ b/app/views/signin/select-team.html
@@ -43,7 +43,7 @@
 
 			  <details role="group" style="width:650px;  ">
 				  <summary role="button" aria-controls="details-content-0" aria-expanded="false" style="margin-top:10px;">
-					  <span class="summary">more teams</span></summary>
+					  <span class="summary">More teams</span></summary>
 				  <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true"  style="margin-top:0px; margin-bottom:30px; padding-bottom:10px;">
 
 					  <div class="multiple-choice">
