--- a/app/views/register/additional-questions.html
+++ b/app/views/register/additional-questions.html
@@ -4,8 +4,11 @@
 {% endif %}
 {% set external_journey = true %}
 
-{% block page_title %}
+{% block after_header %}
+<!-- nothing to there is no second alpha banner -->
+{% endblock %}
 
+{% block page_title %}
   GOV.UK prototype kit
 {% endblock %}
 
