--- a/app/views/register/business-sector-new.html
+++ b/app/views/register/business-sector-new.html
@@ -2,10 +2,14 @@
 {% set loggedIn = true %}
 {% set external_journey = true %}
 
-{% block page_title %}
-
-  GOV.UK prototype kit
+{% block after_header %}
+<!-- nothing to there is no second alpha banner -->
 {% endblock %}
+
+{% block page_title %}
+GOV.UK prototype kit
+{% endblock %}
+
 
 {% block content %}
 {% include "includes/great-header.html" %} 
