--- a/app/views/register/business-sector.html
+++ b/app/views/register/business-sector.html
@@ -2,9 +2,12 @@
 {% set loggedIn = true %}
 {% set external_journey = true %}
 
-{% block page_title %}
+{% block after_header %}
+<!-- nothing to there is no second alpha banner -->
+{% endblock %}
 
-  GOV.UK prototype kit
+{% block page_title %}
+GOV.UK prototype kit
 {% endblock %}
 
 {% block content %}
