--- a/app/views/register/check-your-answers.html
+++ b/app/views/register/check-your-answers.html
@@ -3,10 +3,15 @@
 {% set loggedIn = false %}
 {% endif %}
 {% set external_journey = true %}
-{% block page_title %}
 
-  GOV.UK prototype kit
+{% block after_header %}
+<!-- nothing to there is no second alpha banner -->
 {% endblock %}
+
+{% block page_title %}
+GOV.UK prototype kit
+{% endblock %}
+
 
 {% block content %}
 {% include "includes/great-header.html" %} 
