--- a/app/views/register/sign-in-or-create-account-eventbrite.html
+++ b/app/views/register/sign-in-or-create-account-eventbrite.html
@@ -2,14 +2,13 @@
 {% set loggedIn = false %}
 {% set external_journey = true %}
 
-<!--
-  {% for key,value in data %}
-            <h4>{{ key }}{{ value }}</h4>
-            {% endfor %}
--->
-{% block page_title %}
 
-  GOV.UK prototype kit
+{% block after_header %}
+<!-- nothing to there is no second alpha banner -->
+{% endblock %}
+
+{% block page_title %}
+GOV.UK prototype kit
 {% endblock %}
 
 {% block content %}
