--- a/app/views/register/sign-in.html
+++ b/app/views/register/sign-in.html
@@ -6,10 +6,14 @@
 
 {% set external_journey = true %}
 
-{% block page_title %}
-
-  GOV.UK prototype kit
+{% block after_header %}
+<!-- nothing to there is no second alpha banner -->
 {% endblock %}
+
+{% block page_title %}
+GOV.UK prototype kit
+{% endblock %}
+
 
 {% block content %}
 
