--- a/app/views/create-event/description.html
+++ b/app/views/create-event/description.html
@@ -11,6 +11,9 @@
 
 {% block content %}
 
+{% include "includes/gov-alpha-banner.html" %}
+
+
 <main id="content" role="main">
   <div class="grid-row">
     <div class="full-grid-mode" style="margin-left:15px;">
