--- a/app/views/create-event/go-live.html
+++ b/app/views/create-event/go-live.html
@@ -7,6 +7,9 @@
 
 {% block content %}
 
+{% include "includes/gov-alpha-banner.html" %}
+
+
 <main id="content" role="main">
   <div class="grid-row">
     <div class="full-grid-mode" style="margin-left:15px">
