--- a/app/views/create-event/template-reminder.html
+++ b/app/views/create-event/template-reminder.html
@@ -7,6 +7,9 @@ GOV.UK prototype kit
 
 {% block content %}
 
+{% include "includes/gov-alpha-banner.html" %}
+
+
 <main id="content" role="main">
 	<div class="grid-row">
 		<div class="full-grid-mode" style="margin-left:15px">
