--- a/app/views/signin/index.html
+++ b/app/views/signin/index.html
@@ -6,6 +6,8 @@
 
 {% block content %}
 
+{% include "includes/gov-alpha-banner.html" %}
+
 <main id="content" role="main">
   <div class="grid-row">
     <div class="column-two-thirds">
