--- a/app/views/signin/select-team.html
+++ b/app/views/signin/select-team.html
@@ -4,7 +4,13 @@
   GOV.UK prototype kit
 {% endblock %}
 
+
+
+
 {% block content %}
+
+{% include "includes/gov-alpha-banner.html" %}
+
 
 <main id="content" role="main">
   <div class="grid-row">
