fix to wrong tracking link "copy to clipboard" button

--- a/app/views/includes/tracking-links.html
+++ b/app/views/includes/tracking-links.html
@@ -12,7 +12,7 @@
     <div style="display:flex;  justify-content: space-between;">
       <p style="margin-top:8px; margin-bottom:0px; margin-right:30px;">www.events.great.gov.uk/{{ session.eventsLiveURLS[session.currentEventShowing][1][number] }}</p>
       <div>
-        <input style="float:right;" type="submit" class="button-secondary" formaction="/create-event/go-live" value="Copy to clipboard">
+        <input style="float:right;" type="submit" class="button-secondary" formaction="#" value="Copy to clipboard">
       </div>
     </div>
 
