updates for external journey

--- a/app/views/create-event/mvp-internal/index.html
+++ b/app/views/create-event/mvp-internal/index.html
@@ -48,14 +48,14 @@ a.link:visited, a:visited {color:#005ea5 !important};
       <td class="numeric grey"><a href="">www.great.gov.uk/events/123456</a></td>
       <td class="numeric"><a href="summary">Edit</a></td>
       <td class="numeric"><a href="https://www.eventbrite.co.uk/myevent?eid=39948447883">Monitor</a></td>
-      <td class="numeric"><a href="https://admin.b2match.com/e/2832">Monitor</a></td>
+      <td class="numeric"><a href="https://admin.b2match.com/e/2832/meetings">Monitor</a></td>
     </tr>
     <tr>
       <th scope="row">DIT ‘Meet the buyer’ at Tradexpo</th>
       <td class="numeric grey">Not published<br><a href="/create-event/mvp-internal/add-tags">Publish to GREAT</a></td>
       <td class="numeric"><a href="https://www.eventbrite.co.uk/edit?eid=39948447883">Edit</a></td>
       <td class="numeric"><a href="https://www.eventbrite.co.uk/myevent?eid=39948447883">Monitor</a></td>
-      <td class="numeric"><a href="https://admin.b2match.com/e/2832">Monitor</a></td>
+      <td class="numeric"><a href="https://admin.b2match.com/e/2832/meetings">Monitor</a></td>
     </tr>
     <tr>
       <th scope="row">DIT ‘Meet the buyer’ at Tradexpo</th>
