--- a/app/views/includes/great-footer.html
+++ b/app/views/includes/great-footer.html
@@ -1,36 +1,54 @@
-
 <style>
-  .footer .footer-bottom {border:0} 
-  #footer {
-    display: none
-  }
+footer ul li {
+  list-style: none;
+}
+footer {display: none}
+footer.static-header-footer {display: block}
 </style>
-<footer role="contentinfo">
-  <div class="footer background--great-blue soft--top">
-      <div class="outer-container">
-        <div class="footer-section">
-          <div class="col-8">
-            <a href="https://www.exportingisgreat.gov.uk/" title="Go to the Exporting is Great homepage">
-              <img src="https://d2w7ccnd7xbk9v.cloudfront.net/static/images/EiG-logo-stacked.8bc6134cffb3.svg" alt="Exporting is Great logo" class="footer-logo">
-            </a>
-          </div>
-
-          
-
-        </div>
-      </div>
-      <div class="outer-container">
-        <div class="footer-bottom">
-          <div class="navigation-strip">
-            <ul class="list-inline list-separators">
-              <li class="float--left soft--right"><a class="" href="https://www.gov.uk/" title="hm government"><img src="https://d2w7ccnd7xbk9v.cloudfront.net/static/images/hm-gov-horizontal.30bb3826fd58.svg"></a></li>
-              <li class="float--left soft--left footer-links--border"><a class="link--grey" href="https://www.great.gov.uk/" title="part of great.gov.uk">Part of <strong>great.gov.uk</strong></a></li>
-            </ul>
-          </div>
-          <div class="footer-copy font-light-grey font-xsmall">
-            <p>© Crown copyright 2017. All rights reserved.</p>
-          </div>
-        </div>
-      </div>
+<footer id="footer" class="static-header-footer">
+  <nav class="container">
+    <div class="link-group"><img id="footer-dit-logo" src="/public/great-library/images/DfIT_WHITE_AW.de9db0b6a757.png" height="70px" alt="Department for International Trade"><img id="footer-eig-logo" src="/public/great-library/images/eig-logo-stacked.90894c28d774.svg" height="82px" alt="Exporting is Great">
+    </div>
+    <div class="link-group">
+      <p id="footer-export-readiness-links" class="list-heading">Export readiness</p>
+      <ul aria-labelledby="footer-export-readiness-links" class="navigation">
+        <li><a href="/new/">I'm new to exporting</a></li>
+        <li><a href="/occasional/">I export occasionally</a></li>
+        <li><a href="/regular/">I'm a regular exporter</a></li>
+      </ul>
+    </div>
+    <div class="link-group">
+      <p id="footer-guidance-links" class="list-heading">Guidance</p>
+      <ul aria-labelledby="footer-guidance-links" class="navigation">
+        <li><a href="/market-research/">Market research</a></li>
+        <li><a href="/customer-insight/">Customer insight</a></li>
+        <li><a href="/finance/">Finance</a></li>
+        <li><a href="/business-planning/">Business planning</a></li>
+        <li><a href="/getting-paid/">Getting paid</a></li>
+        <li><a href="/operations-and-compliance/">Operations and compliance</a></li>
+      </ul>
+    </div>
+    <div class="link-group">
+      <p id="footer-services-links" class="list-heading">Services</p>
+      <ul aria-labelledby="footer-services-links" class="navigation">
+        <li><a href="https://find-a-buyer.export.great.gov.uk/">Create an export profile</a></li>
+        <li><a href="https://selling-online-overseas.export.great.gov.uk/">Sell online overseas</a></li>
+        <li><a href="/export-opportunities/">Find export opportunities</a></li>
+        <li><a href="/get-finance/">Get finance</a></li>
+        <li><a href="https://events.trade.gov.uk/">Attend events</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div class="site-links container">
+    <ul class="navigation">
+      <li><a href="/about/" class="">About</a></li>
+      <li><a href="https://contact-us.export.great.gov.uk/directory/" class="">Contact us</a></li>
+      <li><a href="/privacy-and-cookies/" class="">Privacy and cookies</a></li>
+      <li><a href="/terms-and-conditions/" class="">Terms and conditions</a></li>
+      <li><a href="https://www.gov.uk/government/organisations/department-for-international-trade" class="">Department for International Trade on GOV.UK</a></li>
+    </ul>
+  </div>
+  <div class="global-footer">
+    <p class="container"><span>© Crown copyright 2017. All rights reserved.</span></p>
   </div>
 </footer>
