--- a/app/views/register/check-your-answers.html
+++ b/app/views/register/check-your-answers.html
@@ -23,7 +23,7 @@ GOV.UK prototype kit
   <div class="grid-row">
     <div class="column-two-thirds">
       <h1 class="heading-large">
-        Registration summary
+        Check your answers before registration
       </h1>
 
 
@@ -274,7 +274,7 @@ GOV.UK prototype kit
 -->
 
       <div class="form-group" style="margin-top:50px">
-        <a href="confirmation-page" class="button button-blue">Book event</a>
+        <a href="confirmation-page" class="button button-blue">Complete registration</a>
       </div>
 
     </form>
