--- a/app/views/register/business-name.html
+++ b/app/views/register/business-name.html
@@ -17,7 +17,7 @@ GOV.UK prototype kit
 {% include "includes/great-header.html" %} 
 
 <main id="content" role="main">
-	  <h1 class="heading-large" style="font-weight:400;">
+	  <h1 class="heading-large">
 		  Your business
       </h1>
   <div class="grid-row">
@@ -29,130 +29,12 @@ GOV.UK prototype kit
 	  </div>
 
 
-	  <!-- CONDITIONAL ERROR  -->
-		{% if errorQuestions %}
-		<div class="error-summary" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
-
-			<h2 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
-				Missing fields
-			</h2>
-
-			<p>
-				Please check the following errors and try again
-			</p>
-
-
-			{% if errorNewQuestionEmpty %}
-				<ul class="error-summary-list">
-					<li><a href="#previous-questions">Need select a new question or a previous question</a></li>
-				</ul>
-			{% endif %}
-
-			{% if errorQuestionEmpty %}
-				<ul class="error-summary-list">
-					<li><a href="#show-answer-type">Need to enter the question</a></li>
-				</ul>
-			{% endif %}
-
-			{% if errorAnswerTypeEmpty %}
-				<ul class="error-summary-list">
-					<li><a href="#answer-types">Need to select the type of answers for their question</a></li>
-				</ul>
-			{% endif %}
-
-			{% if errorAnswersError %}
-			<ul class="error-summary-list">
-				<li><a href="#show-answers">You need to enter at least 2 answers</a></li>
-			</ul>
-			{% endif %}
-
-
-
-		</div>
-      {% endif %}
-
-
 	  <form action="" method="post" class="form">
 
 
-		  	<fieldset class="form-group {% if session.previousQuestions.length == 0 %} js-hidden {% endif %}" style="margin-bottom:0; padding-bottom:30px" id="previous-questions">
-			  <!--  Additional questions that the registering user need to answer  -->
-
-				<div class="form-group " style="margin-top:10px; margin-bottom:0px">
-
-					{% if errorNewQuestionEmpty %}
-						<div class="form-group  form-group-error">
-					{% endif %}
-
-						<label class="bold" for="question">
-							New or previous question
-							{% if errorNewQuestionEmpty %}
-								<span class="error-message">
-									Attendee question missing
-								</span>
-							{% endif %}
-						</label>
 
 
-						<div class="form-group" style="margin-top:0px; margin-bottom:0px">
-
-							<div class="form-date" style="margin-top:5px">
-
-								<div class="multiple-choice"  data-target="show-answer-type">
-									<input id="new-question" type="radio" name="radio-additional-new-old-questions" value="new-question"
-										   {% if errorNewQuestionSelected %} checked="checked" {% endif %}   onclick="prepopClear()">
-									<label for="new-question">New question</label>
-								</div>
-								<div class="multiple-choice" data-target="show-answer-type">
-									<input id="previous-question-one" type="radio" name="radio-additional-new-old-questions" value="previous-question-one"
-										   {% if errorOldQuestionOneSelected %} checked="checked" {% endif %}   onclick="prepopQuestionOne()">
-									<label for="previous-question-one">{{ session.previousQuestions[0][0] }}&nbsp;</label>
-								</div>
-
-								<div class="multiple-choice {% if session.previousQuestions.length < 2 %} js-hidden {% endif %} " data-target="show-answer-type"
-									 	   {% if errorOldQuestionTwoSelected %} checked="checked" {% endif %} >
-									<input id="previous-question-two" type="radio" name="radio-additional-new-old-questions" value="previous-question-two"    onclick="prepopQuestionTwo()">
-									<label for="previous-question-two">{{ session.previousQuestions[1][0] }}&nbsp;</label>
-								</div>
-
-								<div class="multiple-choice {% if session.previousQuestions.length < 3 %} js-hidden {% endif %} " data-target="show-answer-type"
-									 	   {% if errorOldQuestionThreeSelected %} checked="checked" {% endif %} >
-									<input id="previous-question-three" type="radio" name="radio-additional-new-old-questions" value="previous-question-two"    onclick="prepopQuestionThree()">
-									<label for="previous-question-two">{{ session.previousQuestions[2][0] }}&nbsp;</label>
-								</div>
-
-								<div class="multiple-choice {% if session.previousQuestions.length < 4 %} js-hidden {% endif %} " data-target="show-answer-type"
-									       {% if errorOldQuestionFourSelected %} checked="checked" {% endif %} >
-									<input id="previous-question-four" type="radio" name="radio-additional-new-old-questions" value="previous-question-two"    onclick="prepopQuestionFour()">
-									<label for="previous-question-four">{{ session.previousQuestions[3][0] }}&nbsp;</label>
-								</div>
-
-								<div class="multiple-choice {% if session.previousQuestions.length < 5 %} js-hidden {% endif %} " data-target="show-answer-type"
-									 	   {% if errorOldQuestionFiveSelected %} checked="checked" {% endif %} >
-									<input id="previous-question-five" type="radio" name="radio-additional-new-old-questions" value="previous-question-two"     onclick="prepopQuestionFive()">
-									<label for="previous-question-five">{{ session.previousQuestions[4][0] }}&nbsp;</label>
-								</div>
-							</div>
-
-						</div>
-
-
-					{% if errorNewQuestionEmpty %}
-						</div>
-					{% endif %}
-
-				</div>
-		  	</fieldset>
-
-
-
-			<fieldset class=" {% if 0 < session.previousQuestions.length  and
-			  									(errorQuestionEmpty == undefined or errorQuestionEmpty == false) and
-			  									(errorAnswerTypeEmpty == undefined or errorAnswerTypeEmpty == false) and
-			  									(errorAnswersError == undefined or errorAnswersError == false) %}
-			  								 js-hidden
-			  							  {% endif %}"
-						id="show-answer-type">
+			<fieldset>
 
 
 
