update to footer

--- a/app/views/register/confirmation-page.html
+++ b/app/views/register/confirmation-page.html
@@ -88,8 +88,10 @@ Go to an event
   </div>
 
 </main>
+{% include "includes/great-footer.html" %} 
 
 {% endblock %}
+
 {% block footer_support_links %} 
 <ul>
       <li>
@@ -99,4 +101,5 @@ Go to an event
         <a href="/register/reminder-email">View reminder email</a>
       </li>
     </ul>
+
 {% endblock %}
