fixes for alpha assessent

--- a/app/views/create-event/venue.html
+++ b/app/views/create-event/venue.html
@@ -211,7 +211,7 @@
 			}
 			else  // otherwise show addresss
 			{
-				window.open("https://www.google.co.uk/maps/place/Royal+Devon+and+Exeter+Hospital/@50.7162594,-3.5088454,17z/data=!3m1!4b1!4m5!3m4!1s0x486da40437265199:0xb269d663e3730e3b!8m2!3d50.7162594!4d-3.5066567", '_blank');
+				window.open("https://www.google.co.uk/maps/place/The+Innovation+Centre/@50.7369133,-3.5307244,16.25z/data=!4m5!3m4!1s0x0:0x9a5f61816c99672c!8m2!3d50.7381353!4d-3.5306391", '_blank');
 			}
 
 		}
