--- a/app/views/index.html
+++ b/app/views/index.html
@@ -38,6 +38,14 @@
 
       <p><a href="/register-for-event-attendee">Register for event journey</a></p>
 
+
+      <h2 class="heading-medium">Monitor events</h2>
+
+      <p><a href="/scenario-1">Sign in to account</a></p>
+
+
+      <br>
+
       <p class="bold" style="margin-top:35px;">Basic event examples</p>
 
       <ul>
