--- a/app/views/includes/great-footer.html
+++ b/app/views/includes/great-footer.html
@@ -4,7 +4,19 @@ footer ul li {
 }
 footer {display: none}
 footer.static-header-footer {display: block}
+
+div#gethelp {display: none}
+
 </style>
+
+
+
+<div id="gethelpgreat" style=margin:30px;">
+  <p style="width:1200px; margin: auto;"><a href="#" style="color: #6f777b; text-decoration: underline">Get help with this page</a></p>
+</div>
+
+
+
 <footer id="footer" class="static-header-footer">
   <nav class="container">
     <div class="link-group"><img id="footer-dit-logo" src="/public/great-library/images/DfIT_WHITE_AW.de9db0b6a757.png" height="70px" alt="Department for International Trade"><img id="footer-eig-logo" src="/public/great-library/images/eig-logo-stacked.90894c28d774.svg" height="82px" alt="Exporting is Great">
