--- a/app/views/includes/great-header-preview-page.html
+++ b/app/views/includes/great-header-preview-page.html
@@ -1,5 +1,5 @@
 <style>
-	header, #global-header-bar {display: none}
+	header, #global-header-bar
 
     border: 0;
     font: inherit;
@@ -83,8 +83,7 @@ main#content {max-width: 1200px}
       </div>
 
     <!-- These require the ""  -->
-    {% elif session.liveOrNot == "true" %}
-
+   {% elif session.liveOrNot == "true" %}
         <div style="background-color: #FFFFFF; border-bottom: 10px solid #000000; height:410px; padding-top:0px; padding-bottom:10px; display: flex; " >
 
             <div style="flex-grow:1"> </div>
@@ -114,109 +113,14 @@ main#content {max-width: 1200px}
 
         </div>
 
-    {% endif %}
+   {% endif %}
 
 {% endif %}
 
 
 
-<div class="navigation">
-      <div class="navigation-strip background--dark-navy">
-        <div class="outer-container">
-          <ul class="list-inline list-separators">
-            <li class="float--left soft-half--right navigation-skip-to"><a class="link link--grey" href="#content" title="Skip to main content"><strong>Skip to main content</strong></a></li>
-            <li class="float--left soft-half--right"><a class="logo-hmg" href="https://www.gov.uk/" title="Go to the GOV.UK homepage"><img src="/public/great-library/images/hm_government_logo_horizontal.svg" alt="HM Government logo"></a></li>
-            <li class="float--left soft-half--left"><a class="link link--white" href="https://great.gov.uk" title="part of great.gov.uk"><span class="hide-mobile font-light-grey font-light">Part of </span><span class="font-regular">great.gov.uk</span></a></li>
-          </ul>
-{% if loggedIn == false and external_journey == true %}
-          <ul class="list-inline list-separators float--right navigation-login font-regular" id="sso-signin">
-            <li class="float--left soft-half--right"><a class="link--white" href="/register/sign-in" title="Sign in"><i class="icon icon--left icon-sign-in" style="background-image: url(/public/great-library/images/icons/signin.svg)"></i><span class="hide-mobile">Sign in</span></a></li>
-            <li class="float--left soft-half--left hide-mobile"><a class="link--white" href="https://sso.trade.great.gov.uk/accounts/signup/" title="Register"><span>Test</span></a></li>
-          </ul>
-          <ul class="list-inline list-separators float--right navigation-login font-regular" id="sso-signout" style="display:none">
-            <li class="float--left soft-half--right"><a class="link--white" href="https://profile.great.gov.uk/export-opportunities/applications/" title="Profile"><i class="icon icon--left icon-sign-in" style="background-image: url(/public/great-library/images/icons/signout.svg)"></i><span class="hide-mobile">Profile</span></a></li>
-            <li class="float--left soft-half--left hide-mobile"><a class="link--white" href="https://sso.trade.great.gov.uk/accounts/logout/" title="Register"><span>Test out</span></a></li>
-          </ul>
-{% elif loggedIn == true and external_journey == true %}
-            
-          <ul class="list-inline list-separators float--right navigation-login font-regular" id="sso-signout">
-            
-            <li class="float--left soft-half--right"> <a class="link--white" href="https://profile.great.gov.uk/export-opportunities/applications/" title="Profile"><span class="hide-mobile">Profile</span></a></li>
-            <li class="float--left soft-half--left hide-mobile"><a class="link--white" href="https://sso.trade.great.gov.uk/accounts/logout/" title="Register"><span>Sign out</span></a></li>
-          </ul>
-          <div class="float--right soft-half--right"> <a class="link--white" href="#" title="Profile"><span class="hide-mobile">Hi {{ data['email-address'] }}</span></div>
-{% endif %}
-        </div>
-      </div>
-      <div class="background--great-blue">
-        <div class="outer-container">
-          <a href="https://export.great.gov.uk/" title="Go to the Exporting is GREAT homepage" class="navigation-logo-link float--left">
-            <img src="/public/great-library/images/eig_logo_horizontal.svg" alt="Exporting is GREAT logo" class="navigation-logo">
-          </a>
-        </div>
-      </div>
-      <div class="navigation-main background--dark-blue">
-        <div class="navigation-main-section outer-container">
-          <nav>
-            <ul class="list-inline list-separators navigation-main-menu">
-             
-            </ul>
-          </nav>
-          <a class="button navigation-main-button font-white" title="" href=""><i class="icon icon-menu"></i>All</a>
-        </div>
-        <div class="navigation-toggle background--dark-navy">
-          <div class="outer-container">
-            <div class="col-3">
-              <div class="navigation-toggle-services-section">
-                <h3 class="font-large font-light-grey font-light push--bottom hide-mobile">Export readiness</h3>
-                <ul class="font-regular">
-                  <li class="navigation-toggle-item navigation-toggle-services"><a title="new to exporting" href="/new/" class="">New to exporting</a></li>
-                  <li class="navigation-toggle-item navigation-toggle-services"><a title="occasional exporter" href="/occasional/" class="">Occasional exporter</a></li>
-                  <li class="navigation-toggle-item navigation-toggle-services"><a title="regular exporter" href="/regular/" class="last ">Regular exporter</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-3">
-              <h3 class="font-large font-light-grey font-light push--bottom hide-mobile soft--left">Online tools</h3>
-              <ul class="navigation-toggle-middle">
-                <li class="navigation-toggle-item"><a href="https://export.great.gov.uk/opportunities" title="Export opportunities">Export opportunities</a></li>
-                <li class="navigation-toggle-item"><a href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer">Find a buyer</a></li>
-                <li class="navigation-toggle-item"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas">Selling online overseas</a></li>
-              </ul>
-            </div>
-            <div class="col-3">
-              <h3 class="font-large font-light-grey font-light push--bottom hide-mobile soft--left">Other support</h3>
-              <ul class="navigation-toggle-middle">
-                <li class="navigation-toggle-item"><a href="/get-finance/" title="Get finance" class="">Get finance</a></li>
-                <li class="navigation-toggle-item"><a href="https://events.trade.gov.uk/" title="Events">Events</a></li>
-              </ul>
-            </div>
-            <div class="col-3">
-              <h3 class="font-large font-light-grey font-light soft--left push--bottom hide-mobile">About us</h3>
-              <ul class="navigation-toggle-middle">
-                <li class="navigation-toggle-item"><a href="/about/" title="About great.gov.uk">About great.gov.uk</a></li>
-                <li class="navigation-toggle-item"><a href="https://contact-us.export.great.gov.uk/selling_online_overseas" title="Contact us" class="last">Contact us</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
+<!-- the default header -->
+
+{% include "includes/great-header.html" %}
 
 
-      </div>
-
-
-    </div>
-
-
-    <div class="govuk-beta-label" style="max-width: 1200px; margin-left: auto; margin-right: auto;">
-      <p style="
-        font-size: 14px;
-        padding: 10px 0;
-        border-bottom: 1px solid #DDD;">
-        <strong class="phase-tag">Alpha</strong>
-        <span>
-            This is a new service - your
-              <a target="_blank" rel="noopener noreferrer" href="/account/great-feedback" style="text-decoration: underline;">feedback</a> will help us improve it.
-          </span>
-      </p>
-    </div>
