Updated header for beta and remove links to gov and service

--- a/app/views/includes/great-header.html
+++ b/app/views/includes/great-header.html
@@ -1040,7 +1040,7 @@
         font-size: 14px;
         padding: 10px 0;
         border-bottom: 1px solid #DDD;">
-        <strong class="phase-tag">Alpha</strong>
+        <strong class="phase-tag">BETA</strong>
         <span>
             This is a new service - your
               <a target="_blank" rel="noopener noreferrer" href="/account/great-feedback" style="text-decoration: underline;">feedback</a> will help us improve it.
